@@ -1,3 +1,7 @@
+2009-08-04 Ozan Çağlayan <ozan@pardus.org.tr>
+		* (operations/build.py): Really fix the abandoned file checking when
+		the path in pspec.xml and the actual path of a missed file intersects.
+
 2009-08-03 Fatih Aşıcı <fatih@pardus.org.tr>
 		* Make it possible to specify doc directory's name via destDir
 		parameter provided to pisitools.dodoc.
